<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControleDeFinancas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Senha</string>
    <string name="btnLogin">Login</string>
    <string name="btnCalendar">Calendario</string>
    <string name="btnBackup">Backup</string>
    <string name="btnCategories">Categorias</string>
    <string name="btnFinances">Finanças</string>
    <string name="btnGraphics">Gráficos</string>
    <string name="btnDeleteData">Apagar Dados</string>
    <string name="btnInformations">Informações</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="btnSignUp">Cadastrar</string>
	<string name="arrow_left">Left Arrow</string>
	<string name="arrow_right">Right Arrow</string>
	<string name="btnCancel">Cancelar</string>
</resources>
