<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.controledefinancas.activity.MainActivity" >

    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="94dp"
        android:text="@string/btnCalendar" />

    <Button
        android:id="@+id/btnBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCalendar"
        android:layout_alignBottom="@+id/btnCalendar"
        android:layout_toRightOf="@+id/btnCalendar"
        android:text="@string/btnBackup" />

    <Button
        android:id="@+id/btnCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCalendar"
        android:layout_below="@+id/btnCalendar"
        android:text="@string/btnCategories" />

    <Button
        android:id="@+id/btnFinances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCategories"
        android:layout_alignBottom="@+id/btnCategories"
        android:layout_toRightOf="@+id/btnCategories"
        android:text="@string/btnFinances" />

    <Button
        android:id="@+id/btnGraphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCategories"
        android:layout_below="@+id/btnCategories"
        android:text="@string/btnGraphics" />

    <Button
        android:id="@+id/btnDeleteData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnGraphics"
        android:layout_alignBottom="@+id/btnGraphics"
        android:layout_toRightOf="@+id/btnGraphics"
        android:text="@string/btnDeleteData" />

    <Button
        android:id="@+id/btnInformations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnBackup"
        android:layout_below="@+id/btnGraphics"
        android:layout_marginRight="16dp"
        android:text="@string/btnInformations" />

</RelativeLayout>
